--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,21 @@
 .students p{
   margin: 0;
 }
+
+.welcome-message{
+  font-size: 2.5em;
+  background-color: green;
+  color: white;
+  padding: 20px;
+  border: radius 5px;
+  margin:0; 
+}
+
+.login-message{
+  font-size: 2.5em;
+  background-color: lightblue;
+  color: white;
+  padding: 20px;
+  border: radius 5px;
+  margin:0; 
+}
